--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="page">
         <div id="home">
             <!-- Top Banner-->
-            <a class="section section-banner text-center d-none d-xl-block" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" style="background-image: url(images/banner/banner-bg-02-1920x60.jpg); background-image: -webkit-image-set( url(images/banner/banner-bg-02-1920x60.jpg) 1x, url(images/banner/banner-bg-02-3840x120.jpg) 2x )"
-                target="_blank"><img src="images/banner/banner-fg-02-1600x60.png" srcset="images/banner/banner-fg-02-1600x60.png 1x, images/banner/banner-fg-02-3200x120.png 2x" alt="" width="1600" height="310"></a>
+            <!-- <a class="section section-banner text-center d-none d-xl-block" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" style="background-image: url(images/banner/banner-bg-02-1920x60.jpg); background-image: -webkit-image-set( url(images/banner/banner-bg-02-1920x60.jpg) 1x, url(images/banner/banner-bg-02-3840x120.jpg) 2x )"
+                target="_blank"><img src="images/banner/banner-fg-02-1600x60.png" srcset="images/banner/banner-fg-02-1600x60.png 1x, images/banner/banner-fg-02-3200x120.png 2x" alt="" width="1600" height="310"></a> -->
             <!-- Page Header-->
             <header class="section page-header">
                 <!-- RD Navbar-->
@@ -101,7 +101,7 @@
             </header>
 
             <!-- Swiper-->
-            <section class="section swiper-container swiper-slider swiper-slider-classic" data-loop="true" data-autoplay="4859" data-simulate-touch="true" data-direction="vertical" data-nav="false">
+            <!-- <section class="section swiper-container swiper-slider swiper-slider-classic" data-loop="true" data-autoplay="4859" data-simulate-touch="true" data-direction="vertical" data-nav="false">
                 <div class="swiper-wrapper text-center">
                     <div class="swiper-slide" data-slide-bg="images/slider-1-slide-2-1770x742.jpg">
                         <div class="swiper-slide-caption section-md">
@@ -131,13 +131,12 @@
                         </div>
                     </div>
                 </div>
-                <!-- Swiper Pagination-->
                 <div class="swiper-pagination__module">
                     <div class="swiper-pagination__fraction"><span class="swiper-pagination__fraction-index">00</span><span class="swiper-pagination__fraction-divider">/</span><span class="swiper-pagination__fraction-count">00</span></div>
                     <div class="swiper-pagination__divider"></div>
                     <div class="swiper-pagination"></div>
                 </div>
-            </section>
+            </section> -->
 
         </div>
         <!-- See all services-->
@@ -148,26 +147,35 @@
                     </div>
                     <div class="col-lg-7 col-xl-6">
                         <div class="row row-30">
-                            <div class="col-sm-6 wow fadeInRight">
+                            <!-- <div class="col-sm-6 wow fadeInRight">
                                 <article class="box-icon-modern box-icon-modern-custom">
                                     <div>
                                         <h3 class="box-icon-modern-big-title">What We Offer</h3>
                                         <div class="box-icon-modern-decor"></div><a class="button button-primary button-ujarak" href="#">View All Services</a>
                                     </div>
                                 </article>
-                            </div>
+                            </div> -->
                             <div class="col-sm-6 wow fadeInRight" data-wow-delay=".1s">
                                 <article class="box-icon-modern box-icon-modern-2">
                                     <div class="box-icon-modern-icon linearicons-phone-in-out"></div>
-                                    <h5 class="box-icon-modern-title"><a href="#">CORPORATE<br>SOLUTIONS</a></h5>
+                                    <h5 class="box-icon-modern-title"><a href="#">PC<br>PROBLEM</a></h5>
                                     <div class="box-icon-modern-decor"></div>
                                     <p class="box-icon-modern-text">Need specific software for your company? We are ready to develop it!</p>
                                 </article>
                             </div>
+                            <div class="col-sm-6 wow fadeInRight" data-wow-delay=".1s">
+                                <article class="box-icon-modern box-icon-modern-2">
+                                    <div class="box-icon-modern-icon linearicons-phone-in-out"></div>
+                                    <h5 class="box-icon-modern-title"><a href="#">INTERNET<br>ISSUE</a></h5>
+                                    <div class="box-icon-modern-decor"></div>
+                                    <p class="box-icon-modern-text">Need specific software for your company? We are ready to develop it!</p>
+                                </article>
+                            </div>
+
                             <div class="col-sm-6 wow fadeInRight" data-wow-delay=".2s">
                                 <article class="box-icon-modern box-icon-modern-2">
                                     <div class="box-icon-modern-icon linearicons-headset"></div>
-                                    <h5 class="box-icon-modern-title"><a href="#">CALL CENTER<br>SOLUTIONS</a></h5>
+                                    <h5 class="box-icon-modern-title"><a href="#">Furniture<br>PROBLEM</a></h5>
                                     <div class="box-icon-modern-decor"></div>
                                     <p class="box-icon-modern-text">Our experts provide custom products of any complexity for call centers.</p>
                                 </article>
@@ -175,7 +183,7 @@
                             <div class="col-sm-6 wow fadeInRight" data-wow-delay=".3s">
                                 <article class="box-icon-modern box-icon-modern-2">
                                     <div class="box-icon-modern-icon linearicons-outbox"></div>
-                                    <h5 class="box-icon-modern-title"><a href="#">CLOUD<br>DEVELOPMENT</a></h5>
+                                    <h5 class="box-icon-modern-title"><a href="#">CIRCUIT<br>PROBLEM</a></h5>
                                     <div class="box-icon-modern-decor"></div>
                                     <p class="box-icon-modern-text">We can also offer you reliable cloud development solutions.</p>
                                 </article>
