--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <div class="col-sm-6 wow fadeInRight" data-wow-delay=".1s">
                                 <article class="box-icon-modern box-icon-modern-2">
                                     <div class="box-icon-modern-icon linearicons-phone-in-out"></div>
-                                    <h5 class="box-icon-modern-title"><a href="#">PC<br>PROBLEM</a></h5>
+                                    <h5 class="box-icon-modern-title"><a href="./pages/report.html">PC<br>PROBLEM</a></h5>
                                     <div class="box-icon-modern-decor"></div>
                                     <p class="box-icon-modern-text">Need specific software for your company? We are ready to develop it!</p>
                                 </article>
@@ -166,7 +166,7 @@
                             <div class="col-sm-6 wow fadeInRight" data-wow-delay=".1s">
                                 <article class="box-icon-modern box-icon-modern-2">
                                     <div class="box-icon-modern-icon linearicons-phone-in-out"></div>
-                                    <h5 class="box-icon-modern-title"><a href="#">INTERNET<br>ISSUE</a></h5>
+                                    <h5 class="box-icon-modern-title"><a href="./pages/report.html">INTERNET<br>ISSUE</a></h5>
                                     <div class="box-icon-modern-decor"></div>
                                     <p class="box-icon-modern-text">Need specific software for your company? We are ready to develop it!</p>
                                 </article>
@@ -175,7 +175,7 @@
                             <div class="col-sm-6 wow fadeInRight" data-wow-delay=".2s">
                                 <article class="box-icon-modern box-icon-modern-2">
                                     <div class="box-icon-modern-icon linearicons-headset"></div>
-                                    <h5 class="box-icon-modern-title"><a href="#">Furniture<br>PROBLEM</a></h5>
+                                    <h5 class="box-icon-modern-title"><a href="./pages/report.html">Furniture<br>PROBLEM</a></h5>
                                     <div class="box-icon-modern-decor"></div>
                                     <p class="box-icon-modern-text">Our experts provide custom products of any complexity for call centers.</p>
                                 </article>
@@ -183,7 +183,7 @@
                             <div class="col-sm-6 wow fadeInRight" data-wow-delay=".3s">
                                 <article class="box-icon-modern box-icon-modern-2">
                                     <div class="box-icon-modern-icon linearicons-outbox"></div>
-                                    <h5 class="box-icon-modern-title"><a href="#">CIRCUIT<br>PROBLEM</a></h5>
+                                    <h5 class="box-icon-modern-title"><a href="./pages/report.html">CIRCUIT<br>PROBLEM</a></h5>
                                     <div class="box-icon-modern-decor"></div>
                                     <p class="box-icon-modern-text">We can also offer you reliable cloud development solutions.</p>
                                 </article>
