--- a/pages/report.html
+++ b/pages/report.html
@@ -62,7 +62,7 @@
                                     <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                                     <!-- RD Navbar Brand-->
                                     <div class="rd-navbar-brand">
-                                        <a class="brand" href="index.html"><img src="../images/logo-default-223x50.png" alt="" width="223" height="50" /></a>
+                                        <a class="brand" href="../index.html"><img src="../images/logo-default-223x50.png" alt="" width="223" height="50" /></a>
                                     </div>
                                 </div>
                                 <div class="rd-navbar-main-element">
@@ -85,7 +85,7 @@
                                             </ul>
                                         </div>
                                         <ul class="rd-navbar-nav">
-                                            <li class="rd-nav-item active"><a class="rd-nav-link" href="#home">Home</a></li>
+                                            <li class="rd-nav-item active"><a class="rd-nav-link" href="../index.html">Home</a></li>
                                             <li class="rd-nav-item"><a class="rd-nav-link" href="#services">Services</a></li>
                                             <li class="rd-nav-item"><a class="rd-nav-link" href="#projects">Projects</a></li>
                                             <li class="rd-nav-item"><a class="rd-nav-link" href="#team">Team</a></li>
