--- a/pages/report.html
+++ b/pages/report.html
@@ -141,7 +141,8 @@
                             </div>
                         </div>
                     </div>
-                    <button class="button button-primary button-pipaluk" type="submit">Send Report</button>
+                    <!-- <button class="button button-primary button-pipaluk" type="submit">Send Report</button> -->
+                    <a href="./thax.html" class="button button-primary button-pipaluk" type="submit">Send Report</a>
                 </form>
             </div>
         </section>
