--- a/pages/thax.html
+++ b/pages/thax.html
@@ -15,10 +15,17 @@
             background: #ffffff;
             background: linear-gradient(to bottom, #ffffff 0%, #e1e8ed 100%);
             filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e1e8ed', GradientType=0);
-            height: 100%;
-            margin: 0;
             background-repeat: no-repeat;
             background-attachment: fixed;
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        .content {
+            text-align: center;
         }
         
         .wrapper-1 {
