--- a/pages/report.html
+++ b/pages/report.html
@@ -118,26 +118,26 @@
                     <div class="row row-14 gutters-14">
                         <div class="col-md-4">
                             <div class="form-wrap">
-                                <input class="form-input" id="contact-your-name-2" type="text" name="name" data-constraints="@Required">
+                                <input class="form-input" id="contact-your-name-2" type="text" name="name" data-constraints="@Required" required>
                                 <label class="form-label" for="contact-your-name-2">Lab Name</label>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="form-wrap">
-                                <input class="form-input" id="contact-email-2" type="email" name="email" data-constraints="@Email @Required">
+                                <input class="form-input" id="contact-email-2" type="email" name="email" data-constraints="@Email @Required" required>
                                 <label class="form-label" for="contact-email-2">PC Number</label>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="form-wrap">
-                                <input class="form-input" id="contact-phone-2" type="text" name="phone" data-constraints="@Numeric">
+                                <input class="form-input" id="contact-phone-2" type="text" name="phone" data-constraints="@Numeric" required>
                                 <label class="form-label" for="contact-phone-2">Phone</label>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="form-wrap">
                                 <label class="form-label" for="contact-message-2">Problem Description:</label>
-                                <textarea class="form-input textarea-lg" id="contact-message-2" name="message" data-constraints="@Required"></textarea>
+                                <textarea class="form-input textarea-lg" id="contact-message-2" name="message" data-constraints="@Required" required></textarea>
                             </div>
                         </div>
                     </div>
