--- a/pages/report.html
+++ b/pages/report.html
@@ -114,17 +114,17 @@
                         <p>If you have any questions, just fill in the contact form, and we will answer you shortly.</p>
                     </div>
                 </article>
-                <form class="rd-form rd-form-variant-2 rd-mailform" data-form-output="form-output-global" data-form-type="contact" method="post" action="../bat/rd-mailform.php">
+                <form id="report_form" class="rd-form rd-form-variant-2 rd-mailform" data-form-output="form-output-global" data-form-type="contact" method="post" action="../bat/rd-mailform.php">
                     <div class="row row-14 gutters-14">
                         <div class="col-md-4">
                             <div class="form-wrap">
-                                <input class="form-input" id="contact-your-name-2" type="text" name="name" data-constraints="@Required" required>
+                                <input class="form-input" id="contact-your-name-2" type="text" name="name" required>
                                 <label class="form-label" for="contact-your-name-2">Lab Name</label>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="form-wrap">
-                                <input class="form-input" id="contact-email-2" type="email" name="email" data-constraints="@Email @Required" required>
+                                <input class="form-input" id="contact-email-2" type="email" name="email" required>
                                 <label class="form-label" for="contact-email-2">PC Number</label>
                             </div>
                         </div>
@@ -141,8 +141,8 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <button class="button button-primary button-pipaluk" type="submit">Send Report</button> -->
-                    <a href="./thax.html" class="button button-primary button-pipaluk" type="submit">Send Report</a>
+                    <button class="button button-primary button-pipaluk" type="submit">Send Report</button>
+                    <!-- <a href="./thax.html" class="button button-primary button-pipaluk" type="submit">Send Report</a> -->
                 </form>
             </div>
         </section>
@@ -319,7 +319,7 @@
                         <h4>Contact Us</h4>
                         <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                     </div>
-                    <div class="modal-body">
+                    <!-- <div class="modal-body">
                         <form class="rd-form rd-form-variant-2 rd-mailform" data-form-output="form-output-global" data-form-type="contact-modal" method="post" action="../bat/rd-mailform.php">
                             <div class="row row-14 gutters-14">
                                 <div class="col-12">
@@ -349,7 +349,7 @@
                             </div>
                             <button class="button button-primary button-pipaluk" type="submit">Send Message</button>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -360,6 +360,16 @@
     <script src="../js/core.min.js"></script>
     <script src="../js/script.js"></script>
     <!-- coded by Himic-->
+    <script>
+        document.getElementById("report_form").addEventListener("submit", function(event) {
+            // Stop the form from submitting normally
+            event.preventDefault();
+
+            // Redirect to the Thank You page
+            window.location.href = "thax.html";
+        });
+    </script>
+
 </body>
 
 </html>
