--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bot.css">
+    <!--FONT AWESOME-->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
+
+    <!--ICONIFY-->
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+
+    <!--PLUGIN-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
+    <!--GOOGLE FONTS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+
     <style>
         .ie-panel {
             display: none;
@@ -143,10 +158,19 @@
         <section class="section section-sm section-first bg-default text-center" id="services">
             <div class="container">
                 <div class="row row-30 justify-content-center">
-                    <div class="col-md-7 col-lg-5 col-xl-6 text-lg-left wow fadeInUp">
+                    <!-- <div class="col-lg-6 col-xl-6 text-lg-left wow fadeInUp">
                         <img class="bounce-image" src="images/index-1-415x592.png" alt width="415" height="592" />
+                    </div> -->
+                    <div class="col-xl-6 col-lg-6 align-content-center">
+                        <div class="additional">
+                            <section class="chat_animate">
+                                <figure>
+                                    <img src="https://i.postimg.cc/vZzn2Vwv/bot.png" class="up_down" alt />
+                                </figure>
+                            </section>
+                        </div>
                     </div>
-                    <div class="col-lg-7 col-xl-6">
+                    <div class="col-lg-6 col-xl-6">
                         <div class="row row-30">
                             <!-- <div class="col-sm-6 wow fadeInRight">
                                 <article class="box-icon-modern box-icon-modern-custom">
@@ -937,6 +961,7 @@
     <!-- Javascript-->
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/bot.js"></script>
     <!-- coded by Himic-->
 </body>
 
