--- a/pages/report.html
+++ b/pages/report.html
@@ -204,8 +204,8 @@
                             </div>
                         </div>
                     </div>
-                    <button class="button button-primary button-pipaluk" type="submit">Submit Report</button>
-                    <!-- <a href="./thax.html" class="button button-primary button-pipaluk" type="submit">Send Report</a> -->
+                    <!-- <button class="button button-primary button-pipaluk" type="submit">Submit Report</button> -->
+                    <a href="./thax.html" class="button button-primary button-pipaluk" type="submit">Send Report</a>
                 </form>
             </div>
         </section>
