--- a/pages/home.html
+++ b/pages/home.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/bot.css">
+    <link rel="stylesheet" href="../css/custom.css">
     <!--FONT AWESOME-->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
 
