--- a/index.html
+++ b/index.html
@@ -140,13 +140,12 @@
             <!-- /.logo -->
             <form action="">
                 <div class="controls">
-                    <input type="text" name="username" placeholder="Email" class="form-control" />
-                    <input type="text" name="username" placeholder="Password" class="form-control" />
+                    <input type="email" name="username" placeholder="Email" class="form-control" />
+                    <input type="password" name="username" placeholder="Password" class="form-control" />
                     <a href="./pages/home.html" type="button" class="btn btn-default btn-block btn-custom">Login</a>
                 </div>
             </form>
             <p class="new_fr">
-                <a href="">Create an Account | </a>
                 <a href="">Forgot your password?</a>
             </p>
         </div>
